--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
       </center>
     </div>
   </main>
-  <script src="./assets/script/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
