--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Code Quiz</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200&family=Pacifico&family=Playfair:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./quiz.css" />
 </head>
 
